[package]
name = "dungen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
assert_float_eq = "1.1.3"
env_logger = "0.9.0"
euclid = "0.22.6"
fastrand = "1.5.0"
grid = "0.6.0"
integer-sqrt = "0.1.5"
lazy_static = "1.4.0"
log = "0.4.14"
lyon_path = "0.17.7"
num-traits = "0.2.14"
pad = "0.1.6"
pathfinding = "3.0.3"
rand = "0.8.4"
simple-logging = "2.0.2"
static_assertions = "1.1.0"
stroke = { git = "https://github.com/dorianprill/stroke-rs.git" }
term_size = "0.3.2"
tiny-skia = "0.6.1"
serde = { version = "1.0.131", features = ["derive"] }
serde_json = "1.0.72"
serde_cbor = "0.11.2"
rmp = "0.8.10"
rmp-serde = "0.15.5"
tempfile = "3.2.0"
thiserror = "1.0.30"
terminal-menu = { git = "https://gitlab.com/xamn/terminal-menu-rs.git" }
crossterm = "0.22.0"
ansi_colours = "1.0.4"
bitflags = "1.3.2"
parking_lot = "0.11.2"
